--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.8",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
