--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-table": "^8.19.3",
@@ -26,6 +28,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
