--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
-    "next-auth": "^4.24.8",
+    "next-auth": "^5.0.0-beta.22",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
